# BrickBox

./: .gitignore  CMakeLists.txt  README.md  configure.cmd  configure.sh
include/network/: MinecraftClient.hpp  Packet.hpp
pwd/: test.frag  test.vert
src/: Filesystem.cpp  Filesystem.h  main.cpp
src/assets/: BlockModel.cpp  BlockModel.h  BlockModelLoader.cpp  BlockModelLoader.h  STBImage.cpp
src/network/: AbstractFormat.cpp  AbstractFormat.h  Connection.cpp  Connection.h  MinecraftClient.cpp  NetworkTools.cpp  NetworkTools.h  Packet.cpp  Packet.h  PacketReceiver.cpp  PacketReceiver.h  PacketSender.cpp  PacketSender.h
src/network/protocol/: ClientPackets.h  MCProtocol.cpp  MCProtocol.h  ServerPackets.h
src/network/protocol/1.21.11/: MCProtocol.cpp  ProtCallbacks.cpp  Protocol.cpp  Protocol.h
src/network/protocol/1.21.11/client/: CConfigPackets.cpp  CInitPackets.cpp  CSyncPackets.cpp
src/network/protocol/1.21.11/server/: SConfigPackets.cpp  SEventPackets.cpp  SInitPackets.cpp  SMiscPackets.cpp  SSyncPackets.cpp
src/renderer/: AbstractRenderer.cpp  AbstractRenderer.h  AtlasStitcher.cpp  AtlasStitcher.h  InitialRenderLoop.cpp  InitialRenderLoop.h
src/renderer/assets/: BlockModel.cpp  BlockModel.h  RenderableAssets.cpp  RenderableAssets.h  TextureRef.h
src/renderer/glfw/: GLFWLifecycle.cpp  GLFWLifecycle.h  Window.cpp  Window.h
src/renderer/opengl/: Buffer.cpp  Buffer.h  Program.cpp  Program.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/renderer/opengl/programs/: TestProgram.h
